@@ -1,3 +1,7 @@
+20030605
+ - (djm) Support AI_NUMERICHOST in fake-getaddrinfo.c. Needed for recent
+   canohost.c changes.
+
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
    simon@sxw.org.uk (Also matches a change in OpenBSD a while ago)
